# vggt

./: .gitignore  README.md  analyze.ipynb  analyze_attention.py  compute_layerwise_attentions.py  performance_degradation.py  pyproject.toml  visualize_attn_gradio.py
vggt/layers/: attention.py
vggt/models/: aggregator.py
vggt/utils/: attn_capture.py  geometry.py
